Fix scrolling on iOS

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -314,24 +314,25 @@ h2,
   padding: 0;
 }
 
+.video--wrapper {
+  margin: 0 auto;
+  overflow: hidden;
+  max-height: 720px;
+  max-width: 1280px;
+}
+
 .video--container {
   border-radius: 1px;
   -webkit-box-shadow: 0 0 0 8px hsla(0, 0%, 0%, .1);
   -moz-box-shadow: 0 0 0 8px hsla(0, 0%, 0%, .1);
   box-shadow: 0 0 0 8px hsla(0, 0%, 0%, .1);
-  width: 100%;
-  max-width: 1120px;
-  margin: 0 auto;
-  padding: 0;
-}
-
-.video--clip {
   height: 0;
+  overflow: hidden;
   position: relative;
   padding-bottom: 56.25%; /* 16:9 */;
 }
 
-.video--clip iframe {
+.video--container iframe {
   height: 100%;
   left: 0;
   position: absolute;
@@ -340,12 +341,12 @@ h2,
 }
 
 .wrapper {
-  max-width: 1100px;
+  max-width: 1280px;
   margin: 0 auto;
 }
 
 .section--main {
-  padding-top: 8em;
+  padding-top: 10em;
 }
 
 .section--signup {
